--- a/package.json
+++ b/package.json
@@ -1,17 +1,20 @@
 {
-    "name": "xmas_pi",
-    "pretty_name": "Raspberry Pi Christmas Lights Controller",
-    "version": "v0.00.01",
-    "description": "Control christmas lights with your Raspberry Pi",
-    "author": "William Klausmeyer",
-    "main": "server.js",
-    "repository": {
-        "type": "git",
-        "url": "https://github.com/klawil/xmas_pi"
-    },
-    "private": false,
-    "license": "UNLICENSED",
-    "dependencies": {
-        "rpi-gpio": "^0.9.1"
-    }
+  "name": "xmas_pi",
+  "pretty_name": "Raspberry Pi Christmas Lights Controller",
+  "version": "v0.00.01",
+  "description": "Control christmas lights with your Raspberry Pi",
+  "author": "William Klausmeyer",
+  "main": "server.js",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/klawil/xmas_pi"
+  },
+  "private": false,
+  "license": "UNLICENSED",
+  "dependencies": {
+    "body-parser": "^1.18.2",
+    "express": "^4.16.2",
+    "rpi-gpio": "^0.9.1",
+    "sqlite3": "^3.1.13"
+  }
 }
